<resources>
    <string name="app_name">Track_Budget</string>
    <string name="total_balance">Total Balance</string>
    <string name="_300">₹300</string>
    <string name="_400">₹400</string>
    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="add_a_transaction">Add a Transaction</string>
    <string name="bananas">Bananas</string>
    <string name="_12">₹12</string>
</resources>