<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayoutBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:background="@drawable/tr_bg"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_balance"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#0000ff"
        android:layout_marginTop="9dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300"
        android:textSize="32sp"
        android:textStyle="bold"
        android:background="@drawable/budget_bg"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="5dp"
        />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/DashboardCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutBalance"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/txtBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_400"
                    android:textStyle="bold"
                    android:textSize="26sp"
                    android:textColor="#00ff00"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/txtExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_400"
                    android:textStyle="bold"
                    android:textSize="26sp"
                    android:textColor="#ff0000"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Recyclerview_txt"
        android:text="@string/transactions"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:layout_below="@id/DashboardCV"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Recyclerview_txt"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:backgroundTint="#ff0000"
        android:src="@drawable/ic_add"
        app:tint="#F2FCFF"
        app:borderWidth="0dp"
        android:contentDescription="@string/add_a_transaction"
        />


</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>